# comparable

./: .coverage-baseline  .gitignore  CLAUDE.md  Cargo.toml  GENERIC_ENUM_ANALYSIS.md  Makefile  README.md  RELEASE.md  default.nix  flake.nix  flake.nix.new  lefthook.yml  release.sh
.github/workflows/: ci.yml  quick-check.yml
comparable/: Cargo.toml  README.md
comparable/benches/: comparison.rs
comparable/src/: array.rs  boxes.rs  empty.rs  lib.rs  lib.rs.in  map.rs  opt.rs  path.rs  scalar.rs  set.rs  string.rs  tuple.rs  types.rs
comparable_derive/: Cargo.toml  README.md
comparable_derive/src/: attrs.rs  definition.rs  enums.rs  inputs.rs  lib.rs  outputs.rs  structs.rs  utils.rs
comparable_helper/: Cargo.toml
comparable_helper/src/: lib.rs  tuple.rs
comparable_test/: Cargo.toml
comparable_test/test/: array.rs  boxes.rs  empty.rs  enums.rs  generic_enum_test.rs  map.rs  opt.rs  path.rs  scalar.rs  serde.rs  set.rs  string.rs  structs.rs  test.rs  tuple.rs
delta/: Cargo.toml
delta/src/: boxes.rs  empty.rs  lib.rs  map.rs  opt.rs  scalar.rs  set.rs  str.rs  string.rs  types.rs  vec.rs
delta_derive/: Cargo.toml
delta_derive/src/: lib.rs
delta_test/: Cargo.toml
delta_test/src/: sample.rs
delta_test/test/: boxes.rs  empty.rs  enums.rs  map.rs  opt.rs  scalar.rs  set.rs  string.rs  structs.rs  test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare.rs
lib/: Cargo.toml
lib/src/: lib.rs  map.rs  scalar.rs  types.rs
lib/tests/: sample.rs
macro/: Cargo.toml
macro/src/: lib.rs
scripts/: check-coverage.sh  check-perf.sh  ci-perf.sh
src/: lib.rs  opt.rs  sample.rs  scalar.rs  types.rs  vec.rs
