[workspace]

members = [
  "comparable",
  "comparable_derive",
  "comparable_helper",
  "comparable_test",
]

[workspace.package]
version = "0.5.5"

[workspace.dependencies]
comparable = { version = "0.5.5", path = "comparable" }
comparable_derive = { version = "0.5.5", path = "comparable_derive" }
comparable_helper = { version = "0.5.5", path = "comparable_helper" }
comparable_test = { version = "0.5.5", path = "comparable_test" }

convert_case = "0.6"
pretty_assertions = "1.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }
