[workspace]

members = [
  "comparable",
  "comparable_derive",
  "comparable_helper",
  "comparable_test",
]

# The fuzz crate has its own [workspace] and toolchain requirements.
exclude = ["fuzz"]

[workspace.lints.rust]
# Treat all compiler warnings as errors, but only for our own crates: Cargo
# does not apply this table to dependencies, nor to downstream users of the
# published crates.
warnings = "deny"

[workspace.package]
version = "0.5.6"

[workspace.dependencies]
comparable = { version = "0.5.6", path = "comparable" }
comparable_derive = { version = "0.5.6", path = "comparable_derive" }
comparable_helper = { version = "0.5.6", path = "comparable_helper" }
comparable_test = { version = "0.5.6", path = "comparable_test" }

convert_case = "0.6"
pretty_assertions = "1.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }
