[package]
name = "comparable"
version.workspace = true
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/comparable"
repository = "https://github.com/jwiegley/comparable"
documentation = "https://docs.rs/comparable"
keywords = ["comparable", "testing"]
categories = ["development-tools"]
readme = "README.md"
include = ["src/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
path = "src/lib.rs"

[dependencies]
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
comparable_derive = { workspace = true, optional = true }
comparable_helper = { workspace = true }

[dev-dependencies]
comparable_derive = { workspace = true }

[package.metadata.playground]
features = ["derive"]

[features]
# Provide derive(Comparable) macro.
derive = ["comparable_derive"]
serde = ["comparable_derive?/serde"]
