[package]
name = "comparable"
version = "0.5.6"
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/comparable"
repository = "https://github.com/jwiegley/comparable"
documentation = "https://docs.rs/comparable"
keywords = ["comparable", "testing"]
categories = ["development-tools"]
readme = "README.md"
include = ["src/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
path = "src/lib.rs"

[dependencies]
pretty_assertions = "1.3"
serde = { version = "1.0", features = ["derive"] }
comparable_derive = { version = "0.5.6", optional = true, path = "../comparable_derive" }
comparable_helper = { version = "0.5.6", path = "../comparable_helper" }

[dev-dependencies]
comparable_derive = { version = "0.5.6", path = "../comparable_derive" }

[package.metadata.playground]
features = ["derive"]

[features]
# Provide derive(Comparable) macro.
derive = ["comparable_derive"]
serde = ["comparable_derive?/serde"]
