[package]
name = "comparable_derive"
version = "0.5.5"
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/comparable"
repository = "https://github.com/jwiegley/comparable"
documentation = "https://docs.rs/comparable"
keywords = ["comparable", "testing"]
categories = ["development-tools"]
readme = "README.md"
include = ["src/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "comparable_derive"
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
convert_case = "0.4"
proc-macro2 = "1.0"

[features]
serde = []
