[package]
name = "comparable_test"
version = "0.5.6"
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/comparable"
repository = "https://github.com/jwiegley/comparable"
documentation = "https://docs.rs/comparable"
keywords = ["comparable", "testing"]
categories = ["development-tools"]
readme = "README.md"
include = ["test/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[[test]]
name = "sample-test"
path = "test/test.rs"

[[test]]
name = "generic_enum_test"
path = "test/generic_enum_test.rs"

[dev-dependencies]
pretty_assertions = "1.3"
proptest = "1.0"
serde = { version = "1.0", features = ["derive"] }
comparable = { version = "0.5.6", features = ["derive"], path = "../comparable" }
