[package]
name = "comparable_test"
version.workspace = true
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/comparable"
repository = "https://github.com/jwiegley/comparable"
documentation = "https://docs.rs/comparable"
keywords = ["comparable", "testing"]
categories = ["development-tools"]
readme = "README.md"
include = ["test/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[[test]]
name = "sample-test"
path = "test/test.rs"

[[test]]
name = "generic_enum_test"
path = "test/generic_enum_test.rs"

[[test]]
name = "serde"
path = "test/serde.rs"
required-features = ["serde"]

[features]
# Build the test suite (and the `comparable` dependency) with serde support,
# so the serde regression tests in `test/serde.rs` are compiled and run.
serde = ["comparable/serde"]

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
comparable = { workspace = true, features = ["derive"] }

[lints]
workspace = true
