[package]
name = "delta"
version = "0.1.0"
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/delta"
repository = "https://github.com/jwiegley/delta"
documentation = "https://github.com/jwiegley/delta"
keywords = ["delta", "testing"]
categories = ["testing"]
readme = "README.md"
include = ["src/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
pretty_assertions = "1.0"
serde = { version = "1.0", features = ["derive"] }
delta_derive = { version = "0.1", optional = true, path = "../delta_derive" }

[dev-dependencies]
delta_derive = { version = "0.1", path = "../delta_derive" }

[package.metadata.playground]
features = ["derive"]

[features]
# Provide derive(Delta) macro.
derive = ["delta_derive"]