[package]
name = "delta_derive"
version = "0.1.0"
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/delta"
repository = "https://github.com/jwiegley/delta"
documentation = "https://github.com/jwiegley/delta"
keywords = ["delta", "testing"]
categories = ["development-tools"]
readme = "README.md"
include = ["src/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "delta_derive"
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
convert_case = "0.4"
proc-macro2 = "1.0"
