[package]
name = "delta_test"
version = "0.1.0"
authors = ["John Wiegley"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for comparing data structures in Rust, oriented toward testing"
homepage = "https://github.com/jwiegley/delta"
repository = "https://github.com/jwiegley/delta"
documentation = "https://github.com/jwiegley/delta"
keywords = ["delta", "testing"]
categories = ["development-tools"]
readme = "README.md"
include = ["test/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[[test]]
name = "sample-test"
path = "test/test.rs"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
delta = { version = "0.1", features = ["derive"], path = "../delta" }
